<resources>
    <string name="app_name">FNaF Multiplayer</string>

    <string name="title_home">Home</string>
    <string name="title_character">Character</string>
    <string name="title_power">Customization</string>
    <string name="title_marketplace">Marketplace</string>
    <string name="title_pass">BattlePass</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <string name="subtitle_level">Level</string>
    <string name="subtitle_maxlvl">/25</string>
    <string name="subtitle_attack">Damage</string>
    <string name="subtitle_shield">Shield</string>
    <string name="subtitle_movement">Movement</string>
    <string name="subtitle_hp">Health</string>


    <string name="logo_mrboom">Mr Boom Dev</string>

    <string name="banner_background">Background</string>

    <string name="default_lvl">1</string>
</resources>