<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/banner_background"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/placeholder_anime_pfp"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_background"
        android:orientation="vertical"
        android:paddingRight="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.tabs.TabLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                app:tabGravity="start"
                app:tabIndicatorColor="@color/white"
                app:tabIndicatorFullWidth="false"
                app:tabMode="scrollable"
                app:tabRippleColor="@color/tabs"
                app:tabTextAppearance="@style/TextAppearance.AppCompat.Small"
                app:tabTextColor="@color/tabs">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_home" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_character" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_power" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_marketplace" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_pass" />

            </com.google.android.material.tabs.TabLayout>

            <ImageView
                android:id="@+id/profile"
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_circle"
                android:clickable="true"
                android:contentDescription="@string/title_profile"
                android:focusable="true"
                android:padding="13dp"
                app:srcCompat="@drawable/ic_sharp_account_circle_24" />

            <ImageView
                android:id="@+id/settings"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_circle"
                android:clickable="true"
                android:contentDescription="@string/title_settings"
                android:focusable="true"
                android:padding="13dp"
                tools:srcCompat="@drawable/ic_sharp_settings_24" />
        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</FrameLayout>