<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="50dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginRight="5dp"
        android:background="@color/purple_200"
        android:orientation="vertical"
        android:padding="5dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/title_character"
            app:srcCompat="@drawable/placeholder_anime_pfp"
            tools:ignore="ImageContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:background="@color/purple_200"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dp"
                android:text="@string/subtitle_level"
                android:textColor="#311B92"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lvl"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:text="@string/default_lvl"
                android:textColor="#311B92"
                android:textSize="16sp" />

            <TextView
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_maxlvl"
                android:textColor="#311B92"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/lvl_progress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:progressBackgroundTint="@color/black"
                android:progressTint="@color/white" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue_A200"
            android:padding="10dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="100dp"
                        android:text="@string/subtitle_attack"
                        android:textColor="#311B92"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/damage"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/default_lvl"
                        android:textColor="#311B92"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="100dp"
                        android:text="@string/subtitle_movement"
                        android:textColor="#311B92"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/movement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_lvl"
                        android:textColor="#311B92"
                        android:textSize="16sp" />

                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="100dp"
                        android:text="@string/subtitle_hp"
                        android:textColor="#311B92"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_lvl"
                        android:textColor="#311B92"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="50dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="100dp"
                        android:text="@string/subtitle_shield"
                        android:textColor="#311B92"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/shield"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_lvl"
                        android:textColor="#311B92"
                        android:textSize="16sp" />

                </LinearLayout>
            </TableRow>

        </TableLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/skills"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:overScrollMode="never"
            android:scrollbars="none">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</LinearLayout>